# hwi-audit

./: .gitignore  LICENSE  README.md  __main__.py  baseline.csv  cells_data.json  output.csv  param.txt  pyproject.toml
model/gs/: gs_cell.py
model/xml/: camgtcfg.py  cell.py  cellqcipara.py  cellresel.py  eutraninternfreq.py  necell.py
utils/: parser.py  printtofile.py  toget.py
