[project]
name = "hwi-audit"
version = "0.1.0"
description = "Audit Discrepancy param from xml file"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.41.1,<2.0.0)",
    "isort (>=6.0.0,<7.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
